--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -96,6 +96,9 @@
                                         class="fas fa-heart"></i>&ensp;Add
                                     to wishlist</a>
                             {% endif %}
+
+                            <a class="button" style="color:rgb(48, 119, 226)" href='/listings/chat/{{ item["_id"] }}'><i
+                                class="fas fa-comment"></i>&ensp;Chat with Guide</a>
                         
                         {% endif %}
                     </div>
