--- a/templates/tourGuides/business.html
+++ b/templates/tourGuides/business.html
@@ -10,91 +10,9 @@
     <link rel="stylesheet" href="/css/frameworks/bulma-badge.css">
     <script src='/js/form-persistence.js'></script>
     <script>
-
         let listno = 0
-        let locno = 0
-        var intno = 0
-        var persisteditemList = Array.from({{ listing.tour_itinerary | tojson }})
-        var persistedlocList = Array.from({{ listing.tour_location| tojson }})
-        var persistedDayList = Array.from({{ listing.tour_days| tojson }})
-        var persistedTimeList = Array.from({{ listing.tour_time| tojson }})
-
-
+        var persisteditemList = Array.from({{ booking.timeline_content | tojson }})
         var itemList = []
-        var locList = []
-        var locationTags = document.getElementById('locations')
-        var dayList = []
-        var timingList = []
-
-
-
-
-
-        function AppendtoDay() {
-            $("input:checkbox[name=tour_days]:checked").each(function () {
-                dayList.push($(this).val() + '#$%^#') 
-            });
-            AppendtoDayList()
-        }
-
-        function AppendtoDayList() {
-            current_day_list = document.getElementById('tour-days-list')
-            current_day_list.value = Array.from(dayList)
-            console.log(current_day_list)
-        }
-
-        function checkDayfromList(dayValue) {
-            $(`input[value='${dayValue}']`).prop("checked", true)
-            console.log('checked')
-        }
-
-
-        function AppendtoLocation() {
-            var loc = document.getElementById('tour-loc').value
-            current_locs = document.getElementById('locations')
-
-            // var template =
-            // `
-            //     <span class="tag is-info">${loc}</span>
-            // `
-
-            // var template =
-            // `
-            //     <span class="tag is-info">${loc}<a onclick="locList.splice(${locno}, 1, 'None'); current_locs.removeChild(template)>here</a></span>
-            // `
-
-            var template = document.createElement('span')
-            template.className = "tag is-info"
-            // template.id = `loc_${locno}`
-            template.textContent = loc
-            current_locs.appendChild(template)
-
-
-            let removeElement = document.createElement('a');
-            removeElement.textContent = '\u274c';
-            removeElement.id = locno
-            removeElement.addEventListener('click', () => {
-                current_locs.removeChild(template)
-                console.log(`Loc no is: ${locno}`)
-                locList.splice(removeElement.id, 1, 'None')
-                AppendtoLocationList()
-            });
-            template.appendChild(removeElement);
-
-            // current_locs.innerHTML += template
-            locList.push(loc + '#$%^#')
-            console.log(locList)
-
-            locno += 1
-
-        }
-
-
-        function AppendtoLocationList() {
-            current_list = document.getElementById('tour-locations-list')
-            current_list.value = Array.from(locList)
-            console.log(current_list)
-        }
 
         function AppendtoItem() {
             current_list = document.getElementById('tour-item-list')
@@ -103,59 +21,13 @@
             console.log(current_list)
         }
 
-        function AppendtoTimings() {
-            current_list = document.getElementById('tour-timings-list')
-            current_list.value = Array.from(timingList)
-            console.log(current_list)
-        }
-
-
         function UpdateItems() {
             document.getElementById("addItemButton").click()
         }
 
-        // Must click the add listing button in order to get the updated version
-        $('#makeListingForm').submit(() => {
+        $('#editItineraryForm').submit(() => {
             UpdateItems()
-            AppendtoDay()
         });
-
-
-        window.onbeforeunload = () => {
-            Persistence()
-        }
-
-        function AddTiming() {
-        current_start_time = $('#tour-start-time').val()
-        current_end_time = $('#tour-end-time').val()
-        console.log(current_start_time)
-        text = 
-        `
-            <ul id='timing_${intno}' class='timing_interval'>
-                <div class='level-left'>
-                    <p class='level-item timing_interval_str'>${current_start_time} - ${current_end_time}</p>
-
-                    <button class="button level-item" onclick="$('#timing_${intno}').remove()">
-                        Delete
-                    </button>
-                </div>
-            </ul>
-        `
-
-        intno += 1
-        $('#timing-list').append(text)
-
-    }
-
-    function pushTimings() {
-        var interval_str = $(this).text()
-        timingList.push(interval_str + '#$%^#')
-    }
-
-    function loopPushTimings() {
-        $(".timing_interval_str").each(pushTimings)
-    }
-
 
     function AddItinerary() {
         // Dont delete element from array, but replace with 'None' instead. So can still continue to use the indexing
@@ -174,6 +46,7 @@
                     </div>
                 </div>
             </li>
+            <br>
         `
         $("#itinerary-list").append(`${text}`)
         itemList.push(current_item.value + '#$%^#')
@@ -181,6 +54,7 @@
         listno += 1
     }
 
+    
     // To return the itinerary from a previously defined listing
     // tour_item is a single tour itinerary
     function AddItineraryFromList(tour_item) {
@@ -198,56 +72,11 @@
                     </div>
                 </div>
             </li>
+            <br>
         `
         $("#itinerary-list").append(`${text}`)
         itemList.push(tour_item + '#$%^#')
         listno += 1
-    }
-
-    function AddTimingFromList(tour_timing) {
-        text = 
-        `
-            <ul id='timing_${intno}' class='timing_interval'>
-                <div class='level-left'>
-                    <p class='level-item timing_interval_str'>${tour_timing}</p>
-
-                    <button class="button level-item" onclick="$('#timing_${intno}').remove()">
-                        Delete
-                    </button>
-                </div>
-            </ul>
-        `
-
-        intno += 1
-        $('#timing-list').append(text)
-    }
-
-
-    function AddLocationFromList(tour_location) {
-        current_locs = document.getElementById('locations')
-
-        var template = document.createElement('span')
-        template.className = "tag is-info"
-        template.textContent = tour_location
-        current_locs.appendChild(template)
-
-
-        let removeElement = document.createElement('a');
-        removeElement.textContent = '\u274c';
-        removeElement.id = locno
-        removeElement.addEventListener('click', () => {
-            current_locs.removeChild(template)
-            console.log(`Loc no is: ${locno}`)
-            locList.splice(removeElement.id, 1, 'None')
-            AppendtoLocationList()
-        });
-        template.appendChild(removeElement);
-
-        // current_locs.innerHTML += template
-        locList.push(tour_location + '#$%^#')
-        console.log(locList)
-
-        locno += 1
     }
 
     </script>
@@ -511,59 +340,13 @@
                         </div>
                         <!--END: Edit button-->
                     {% endif %}
+
                     <!--START: Edit Itinerary Form (from Alex)-->
                     <div class="container is-hidden" id="ItineraryForm">
-                        <form id='makeListingForm' class="form-horizontal" enctype="multipart/form-data"
-                  action="" method="POST">
+                        <form id='editItineraryForm' class="form-horizontal" enctype="multipart/form-data"
+                  action="/s/businesses/{{ booking['_id'] }}" method="POST">
                 {{ form.csrf_token }}
                 <fieldset>
-
-                    <label class="label">Tour Available Days</label>
-                    <div class='field'>
-                        <div class='control'>
-                            {{ form.tour_days(name='tour_days', type='checkbox', class='checkbox') }}
-                            <ul>
-                                {% for error in form.tour_days.errors %}
-                                <li class="has-text-danger"> {{ error }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class='field'>
-                        <div class='control'>
-                            <input name='tour_days_list[]' , class='input' , id='tour-days-list' , type='hidden'>
-                        </div>
-                    </div>
-
-
-
-                    <label class="label">Tour Timings</label>
-                    <div class='field'>
-                        <div class='control level-left'>
-                            {{ form.tour_start_time(id='tour-start-time', class='dropdown-item level-item') }} <p class='level-item'>-</p>  {{ form.tour_end_time(id='tour-end-time', class='dropdown-item level-item') }}
-                            <a id='addTimingButton' class="button" onclick="AddTiming()">
-                                Add Timing
-                            </a>
-                            <br>
-                            <ul>
-                                {% for error in form.tour_end_time.errors %}
-                                <li class="has-text-danger"> {{ error }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div>
-                        <ol id='timing-list'></ol>
-                    </div>
-
-
-                    <div class='field'>
-                        <div class='control'>
-                            <input name='tour_timings_list[]' , class='input' , id='tour-timings-list' , type='hidden'>
-                        </div>
-                    </div>
 
 
                     <label class="label" for="tour-items">Tour itinerary</label>
@@ -591,50 +374,11 @@
                     </div>
 
 
-                    <label class="label" for="tour-loc">Tour Location</label>
-                    <div class="field has-addons">
-                        <div class="control">
-                            <a class="button" onclick='AppendtoLocation(); AppendtoLocationList()'>
-                                Add Location
-                            </a>
-                        </div>
-                        <div class='control select'>
-                            {{ form.tour_loc(id="tour-loc") }}
-                        </div>
-                    </div>
-
-                    <div id='locations'></div>
-
-                    <ul>
-                        {% for error in form.tour_desc.errors %}
-                            <li class="has-text-danger"> {{ error }}</li>
-                        {% endfor %}
-                    </ul>
-
-                    <div class='field'>
-                        <div class='control'>
-                            <input name='tour_locations_list[]' , class='input' , id='tour-locations-list' ,
-                                   type='hidden'>
-                        </div>
-                    </div>
-
-
-                    <label class="label" for="tour-revs">Maximum Tour Revisions</label>
                     <div class="field">
                         <div class="control">
-                            {{ form.tour_revisions(id="tour-revs", type="number", class="input", value=listing.tour_revisions ) }}
-                            <ul>
-                                {% for error in form.tour_revisions.errors %}
-                                    <li class="has-text-danger"> {{ error }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
 
 
-                    <div class="field">
-                        <div class="control">
-                            <input type='submit' value='Update Listing' id="tour-submit" name="tour-submit"
+                            <input type='submit' value='Update Itinerary' id="tour-submit"
                                    class="button is-success"
                                    onclick=UpdateItems();AppendtoDay()>
                         </div>
@@ -652,7 +396,7 @@
                                 <header class="timeline-header">
                                     <span class="tag is-medium is-success">Start</span>
                                 </header>
-                                {% for item in listing.tour_itinerary %}
+                                {% for item in booking.timeline_content %}
                                     <div class="timeline-item">
                                         <div class="timeline-marker"></div>
                                         <div class="timeline-content">
@@ -1063,5 +807,10 @@
                 <!--END:(Modal) Confirm submit plan-->
 
     <script defer src="/js/booking.js"></script>
+    <script>
+        persisteditemList.forEach(AddItineraryFromList)
+        AppendtoItem()
+
+    </script>
 
 {% endblock %}
