--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -346,6 +346,13 @@
                     </div>
                 </div>
 
+                
+                <ul>
+                    {% for error in form.tour_items.errors %}
+                    <li class="has-text-danger"> {{ error }}</li>
+                    {% endfor %}
+                </ul>
+
 
                 <div>
                     <ol id='itinerary-list'></ol>
