Working on dynamic calendar

--- a/public/css/pages/booking.css
+++ b/public/css/pages/booking.css
@@ -5,15 +5,21 @@
   }
 
 
-  .timeslot_button label {
-    display: inline-block;
-    background-color: rgb(255, 255, 255);
-    padding: 10px 20px;
-    font-family: sans-serif, Arial;
-    font-size: 16px;
-    border: 1px solid #444;
-    border-radius: 4px;
+.timeslot_button label {
+display: inline-block;
+background-color: rgb(255, 255, 255);
+padding: 10px 20px;
+font-family: sans-serif, Arial;
+font-size: 16px;
+border: 1px solid #444;
+border-radius: 4px;
 }
+
+.timeslot_button input[type="radio"]:disabled + label {
+    background-color: rgb(161, 159, 161);
+    border-color:rgb(161, 159, 161);
+}
+
 
 
 .timeslot_button input[type="radio"]:checked + label {
