--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,7 +18,7 @@
                         <div class="profile-img-onprofile" style="background-image: url('data:image/jpeg;base64, {{ user.profile_img }}');"></div>
                         <br>
                         <p class="title is-5 is-spaced has-text-centered">{{ user.name }}</p>
-                        <form class="form-horizontal" action="/users/{{ user._id }}" method="POST">
+                        <form class="form-horizontal" action="/users/{{ user._id }}/profile" method="POST">
                             {{ form.csrf_token }}
                             <fieldset>
                                 <div class="field">
